--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.18.0",
     "eslint-plugin-react-hooks": "1.7.0",
+    "file-loader": "^6.2.0",
     "html-webpack-inline-source-plugin": "^1.0.0-beta.2",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
@@ -36,7 +37,10 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "i18next": "^19.8.4",
+    "i18next-xhr-backend": "^3.2.2",
+    "react-i18next": "^10.9.0"
   },
   "dependencies": {
     "@types/react": "16.9.19",
@@ -45,6 +49,8 @@
     "@types/webpack-env": "1.15.1",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
+    "preact": "^10.5.13",
+    "preact-compat": "^3.19.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
