--- a/package.json
+++ b/package.json
@@ -1,64 +1,82 @@
 {
-  "name": "zenotta-block-explorer",
+  "name": "block-explorer",
+  "author": "Zenotta AG",
+  "version": "0.8.0",
+  "description": "This is zenotta's block explorer",
+  "license": "MIT",
+  "scripts": {
+    "build": "cross-env NODE_ENV=production webpack --config tools/webpack/webpack.prod.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config tools/webpack/webpack.dev.js"
+  },
+  "homepage": ".",
+  "dependencies": {
+    "@hot-loader/react-dom": "^16.13.0",
+    "@types/react-router": "^5.1.12",
+    "axios": "^0.21.1",
+    "axios-retry": "^3.1.9",
+    "chi-ui": "^0.2.4",
+    "chokidar": "^2.1.8",
+    "clean-css": "^4.2.3",
+    "concurrently": "^6.0.0",
+    "electron-pack": "^1.3.2",
+    "electron-packager": "^14.2.1",
+    "function": "^0.6.1",
+    "html-webpack-inline-source-plugin": "0.0.10",
+    "i18next": "^19.9.2",
+    "i18next-xhr-backend": "^3.2.2",
+    "interweave": "^12.7.1",
+    "js-file-download": "^0.4.12",
+    "mobx": "^6.2.0",
+    "mobx-react": "^7.1.0",
+    "nodejs": "^0.0.0",
+    "path": "^0.12.7",
+    "react": "^16.14.0",
+    "react-devtools": "^4.12.4",
+    "react-dom": "^16.14.0",
+    "react-fader": "^3.1.1",
+    "react-i18next": "^10.13.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "require": "^0.4.4",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-sealedbox-js": "^1.2.0",
+    "tweetnacl-util": "^0.15.1",
+    "uuid": "^8.3.2",
+    "wait-on": "^5.3.0",
+    "webpack-dev-middleware": "^4.3.0",
+    "yarn": "^1.22.10"
+  },
   "devDependencies": {
-    "@babel/core": "7.5.0",
-    "@babel/plugin-transform-regenerator": "7.4.5",
-    "@babel/plugin-transform-runtime": "7.5.0",
-    "@babel/preset-env": "7.5.0",
-    "@babel/preset-react": "7.0.0",
-    "@babel/runtime": "7.5.0",
-    "babel-eslint": "9.0.0",
-    "babel-loader": "8.0.4",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.12.12",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/node": "^14.0.11",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
+    "@types/webpack-env": "^1.15.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.0",
-    "error-overlay-webpack-plugin": "^0.4.2",
-    "eslint": "5.16.0",
-    "eslint-config-airbnb": "17.1.1",
-    "eslint-config-prettier": "4.3.0",
-    "eslint-config-wesbos": "0.0.19",
-    "eslint-plugin-html": "5.0.5",
-    "eslint-plugin-import": "2.20.0",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-react": "7.18.0",
-    "eslint-plugin-react-hooks": "1.7.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-inline-source-plugin": "^1.0.0-beta.2",
+    "css-loader": "^3.6.0",
+    "electron": "^3.1.13",
+    "electron-builder": "~22.10.5",
+    "electron-dev": "^1.0.1",
+    "electron-is-dev": "^2.0.0",
+    "error-overlay-webpack-plugin": "^0.4.1",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
-    "prettier": "1.19.1",
-    "react-hot-loader": "^4.12.21",
-    "regenerator-runtime": "0.13.2",
+    "react-hot-loader": "^4.13.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "1.2.3",
-    "ts-loader": "6.2.1",
-    "typescript": "3.8.3",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.9",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "i18next": "^19.8.4",
-    "i18next-xhr-backend": "^3.2.2",
-    "react-i18next": "^10.9.0"
-  },
-  "dependencies": {
-    "@types/react": "16.9.19",
-    "@types/react-dom": "16.9.5",
-    "@types/styled-components": "4.4.2",
-    "@types/webpack-env": "1.15.1",
-    "@typescript-eslint/eslint-plugin": "2.19.2",
-    "@typescript-eslint/parser": "2.19.2",
-    "preact": "^10.5.13",
-    "preact-compat": "^3.19.0",
-    "prop-types": "15.7.2",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "styled-components": "5.0.0"
-  },
-  "scripts": {
-    "build": "webpack --config ./webpack.prod.js --mode production",
-    "dev": "webpack-dev-server",
-    "watch": "webpack --config ./webpack.config.js --mode development"
+    "webpack-dev-server": "^3.11.0"
   }
 }
