--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config tools/webpack/webpack.prod.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config tools/webpack/webpack.dev.js"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config tools/webpack/webpack.dev.js",
+    "start-server": ""
   },
   "homepage": ".",
   "dependencies": {
@@ -44,6 +45,7 @@
     "uuid": "^8.3.2",
     "wait-on": "^5.3.0",
     "webpack-dev-middleware": "^4.3.0",
+    "webpack-hot-middleware": "^2.25.0",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
@@ -56,6 +58,7 @@
     "@types/node": "^14.0.11",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-hot-loader": "^4.1.1",
     "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "@types/webpack-env": "^1.15.2",
