--- a/serverConfig.json
+++ b/serverConfig.json
@@ -1,6 +1,6 @@
 {
     "port": 8090,
-    "storageNode": "54.202.39.133:3002",
-    "computeNode":"44.239.251.56:3001",
+    "storageNode": "http://54.202.39.133:3002",
+    "computeNode":"http://44.239.251.56:3001",
     "cacheCapacity": 100
 }
