--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@types/react-router": "^5.1.12",
     "axios": "^0.21.1",
     "axios-retry": "^3.1.9",
-    "chi-ui": "^0.2.7",
+    "chi-ui": "^0.5.0",
     "chokidar": "^2.1.8",
     "clean-css": "^4.2.3",
     "concurrently": "^6.0.0",
+    "cors": "^2.8.5",
     "electron-pack": "^1.3.2",
     "electron-packager": "^14.2.1",
     "function": "^0.6.1",
