--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "rm -rf public/*.chunk.js && cross-env NODE_ENV=production webpack --config tools/webpack/webpack.prod.js",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config tools/webpack/webpack.dev.js",
+    "start-server-dev": "export NODE_ENV=development; node server.js",
     "start-server": "node server.js"
   },
   "homepage": ".",
