--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "version": "0.8.0",
   "description": "This is zenotta's block explorer",
   "license": "MIT",
+  "engines": {
+    "node": "14.15.0",
+    "npm": "6.14.8"
+  },
   "scripts": {
     "build": "rm -rf public/*.chunk.js && cross-env NODE_ENV=production webpack --config tools/webpack/webpack.prod.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config tools/webpack/webpack.dev.js",
+    "start-dev": "cross-env NODE_ENV=development webpack-dev-server --config tools/webpack/webpack.dev.js",
     "start-server-dev": "export NODE_ENV=development; node server.js",
-    "start-server": "node server.js"
+    "start": "node server.js"
   },
   "homepage": ".",
   "dependencies": {
@@ -16,13 +20,14 @@
     "@types/react-router": "^5.1.12",
     "axios": "^0.21.1",
     "axios-retry": "^3.1.9",
-    "chi-ui": "^0.5.0",
+    "body-parser": "*",
+    "bootstrap": "^5.2.0",
+    "chi-ui": "^0.4.2",
     "chokidar": "^2.1.8",
     "clean-css": "^4.2.3",
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
-    "electron-pack": "^1.3.2",
-    "electron-packager": "^14.2.1",
+    "express": "*",
     "function": "^0.6.1",
     "html-webpack-inline-source-plugin": "0.0.10",
     "i18next": "^19.9.2",
@@ -35,13 +40,16 @@
     "nodejs": "^0.0.0",
     "path": "^0.12.7",
     "react": "^16.14.0",
+    "react-bootstrap": "^2.4.0",
     "react-devtools": "^4.12.4",
     "react-dom": "^16.14.0",
     "react-fader": "^3.1.1",
     "react-i18next": "^10.13.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.1",
     "require": "^0.4.4",
+    "serve": "^14.0.1",
     "tweetnacl": "^1.0.3",
     "tweetnacl-sealedbox-js": "^1.2.0",
     "tweetnacl-util": "^0.15.1",
