Adding compression middleware

--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
   "dependencies": {
     "@hot-loader/react-dom": "^16.13.0",
     "@types/react-router": "^5.1.12",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "axios-retry": "^3.1.9",
     "body-parser": "*",
     "bootstrap": "^5.2.0",
     "chi-ui": "^0.4.2",
     "chokidar": "^2.1.8",
     "clean-css": "^4.2.3",
+    "compression": "^1.7.4",
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
     "dragonfly-cache": "^1.0.1",
@@ -37,7 +38,7 @@
     "js-file-download": "^0.4.12",
     "mobx": "^6.2.0",
     "mobx-react": "^7.1.0",
-    "node-fetch": "^3.2.6",
+    "node-fetch": "^3.3.0",
     "nodejs": "^0.0.0",
     "path": "^0.12.7",
     "react": "^16.14.0",
@@ -57,7 +58,7 @@
     "uuid": "^8.3.2",
     "wait-on": "^5.3.0",
     "webpack-dev-middleware": "^4.3.0",
-    "webpack-hot-middleware": "^2.25.0",
+    "webpack-hot-middleware": "^2.25.3",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
@@ -76,15 +77,11 @@
     "@types/webpack-env": "^1.15.2",
     "cross-env": "^7.0.3",
     "css-loader": "^3.6.0",
-    "electron": "^3.1.13",
-    "electron-builder": "~22.10.5",
-    "electron-dev": "^1.0.1",
-    "electron-is-dev": "^2.0.0",
     "error-overlay-webpack-plugin": "^0.4.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
-    "react-hot-loader": "^4.13.0",
+    "react-hot-loader": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
